# sql-lessons

./: .gitignore  README.md  pyproject.toml
database/: mydb.db
notebooks/: mydb.db  tutorial.ipynb
